# vacancy_to_postgres

./: README.md  main.py  pyproject.toml  queries.sql
services/: api_service.py  dabase_manager.py  sql_service.py  utils.py
