[tool.poetry]
name = "database-basics"
version = "0.1.0"
description = ""
authors = ["Mark Pochivalov <pochivalov.mark@gmail.com>"]
readme = "README.md"
packages = [{include = "database_basics"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
